# occ-ai-dep-onnxruntime-static-win

./: Build-Windows.ps1  CMakeLists.txt
.github/workflows/: build.yml
test/: main.cpp
